BLI_assert on armature object #46302

Closed
opened 2015-09-28 13:48:48 +02:00 by Dalai Felinto · 8 comments

System Information
OSX

Blender Version
Broken: 2.76

Short description of error

Open (12MB) : BOX_GameVR.blend. Play it in a debug build of Blender. The crash comes very soon:

- 0  0x00007fff8ef78866 in __pthread_kill ()
- 1  0x00007fff8e22035c in pthread_kill ()
- 2  0x00007fff8c902b1a in abort ()
- 3  0x00000001013a74a8 in interp_qt_qtqt (result=0x126b9dbec, quat1=0x126324c80, quat2=0x126324c70, t=1) at /Users/dfelinto/blender/git/blender/source/blender/blenlib/intern/math_rotation.c:696
- 4  0x000000010146d6a2 in game_blend_poses (dst=0x126b9ac58, src=0x11c0d7da8, srcweight=1, mode=0) at /Users/dfelinto/blender/git/blender/source/gameengine/Converter/BL_ArmatureObject.cpp:180
- 5  0x000000010146d569 in BL_ArmatureObject::BlendInPose (this=0x126b60030, blend_pose=0x11c0d7da8, weight=1, mode=0) at /Users/dfelinto/blender/git/blender/source/gameengine/Converter/BL_ArmatureObject.cpp:515
- 6  0x0000000101535cf4 in BL_Action::Update (this=0x11c0cca20, curtime=1.32952571) at /Users/dfelinto/blender/git/blender/source/gameengine/Ketsji/BL_Action.cpp:456
- 7  0x0000000101537021 in BL_ActionManager::Update (this=0x126b752c0, curtime=1.32952571) at /Users/dfelinto/blender/git/blender/source/gameengine/Ketsji/BL_ActionManager.cpp:168
- 8  0x0000000101579847 in KX_GameObject::UpdateActionManager (this=0x126b60030, curtime=1.32952571) at /Users/dfelinto/blender/git/blender/source/gameengine/Ketsji/KX_GameObject.cpp:484
- 9  0x00000001015ddada in update_anim_thread_func (pool=0x10ea30548, taskdata=0x126b60030, UNUSED_threadid=7) at /Users/dfelinto/blender/git/blender/source/gameengine/Ketsji/KX_Scene.cpp:1650
- 10 0x00000001013d1028 in task_scheduler_thread_run (thread_p=0x11722e8e8) at /Users/dfelinto/blender/git/blender/source/blender/blenlib/intern/task.c:161
- 11 0x00007fff8e21f899 in _pthread_body ()
- 12 0x00007fff8e21f72a in _pthread_start ()
- 13 0x00007fff8e223fc9 in thread_start ()

Exact steps for others to reproduce the error

I didn't have the time to try to reproduce from scratch or even isolate this issue. I do hope the .blend helps though.

**System Information** OSX **Blender Version** Broken: 2.76 **Short description of error** Open (12MB) : [BOX_GameVR.blend](https://archive.blender.org/developer/F240466/BOX_GameVR.blend). Play it in a debug build of Blender. The crash comes very soon: ``` - 0 0x00007fff8ef78866 in __pthread_kill () - 1 0x00007fff8e22035c in pthread_kill () - 2 0x00007fff8c902b1a in abort () - 3 0x00000001013a74a8 in interp_qt_qtqt (result=0x126b9dbec, quat1=0x126324c80, quat2=0x126324c70, t=1) at /Users/dfelinto/blender/git/blender/source/blender/blenlib/intern/math_rotation.c:696 - 4 0x000000010146d6a2 in game_blend_poses (dst=0x126b9ac58, src=0x11c0d7da8, srcweight=1, mode=0) at /Users/dfelinto/blender/git/blender/source/gameengine/Converter/BL_ArmatureObject.cpp:180 - 5 0x000000010146d569 in BL_ArmatureObject::BlendInPose (this=0x126b60030, blend_pose=0x11c0d7da8, weight=1, mode=0) at /Users/dfelinto/blender/git/blender/source/gameengine/Converter/BL_ArmatureObject.cpp:515 - 6 0x0000000101535cf4 in BL_Action::Update (this=0x11c0cca20, curtime=1.32952571) at /Users/dfelinto/blender/git/blender/source/gameengine/Ketsji/BL_Action.cpp:456 - 7 0x0000000101537021 in BL_ActionManager::Update (this=0x126b752c0, curtime=1.32952571) at /Users/dfelinto/blender/git/blender/source/gameengine/Ketsji/BL_ActionManager.cpp:168 - 8 0x0000000101579847 in KX_GameObject::UpdateActionManager (this=0x126b60030, curtime=1.32952571) at /Users/dfelinto/blender/git/blender/source/gameengine/Ketsji/KX_GameObject.cpp:484 - 9 0x00000001015ddada in update_anim_thread_func (pool=0x10ea30548, taskdata=0x126b60030, UNUSED_threadid=7) at /Users/dfelinto/blender/git/blender/source/gameengine/Ketsji/KX_Scene.cpp:1650 - 10 0x00000001013d1028 in task_scheduler_thread_run (thread_p=0x11722e8e8) at /Users/dfelinto/blender/git/blender/source/blender/blenlib/intern/task.c:161 - 11 0x00007fff8e21f899 in _pthread_body () - 12 0x00007fff8e21f72a in _pthread_start () - 13 0x00007fff8e223fc9 in thread_start () ``` **Exact steps for others to reproduce the error** I didn't have the time to try to reproduce from scratch or even isolate this issue. I do hope the .blend helps though.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Added subscriber: @Sergey

Added subscriber: @Sergey

This is caused bu non-normalized quaternions passes to the interpolation function which isn't supposed to happen.

Someone familiar with GE should just go over and check if such non-normalized quaternion is happening somewhere in the evaluation code or it's coming from some armature DNA.

This is caused bu non-normalized quaternions passes to the interpolation function which isn't supposed to happen. Someone familiar with GE should just go over and check if such non-normalized quaternion is happening somewhere in the evaluation code or it's coming from some armature DNA.

Added subscribers: @dr.sybren, @panzergame, @hg1

Added subscribers: @dr.sybren, @panzergame, @hg1

The buggy section is :

   		float dquat[4], squat[4];
   		
   		copy_qt_qt(dquat, dchan->quat);
   		copy_qt_qt(squat, schan->quat);
   		if (mode==BL_Action::ACT_BLEND_BLEND)
   			interp_qt_qtqt(dchan->quat, dquat, squat, srcweight);

dchan is a bPoseChannel and schan a bPoseChannel, maybe we should normalize quaternions, but this is a normal case with DNA values ?

The buggy section is : ``` float dquat[4], squat[4]; copy_qt_qt(dquat, dchan->quat); copy_qt_qt(squat, schan->quat); if (mode==BL_Action::ACT_BLEND_BLEND) interp_qt_qtqt(dchan->quat, dquat, squat, srcweight); ``` dchan is a bPoseChannel and schan a bPoseChannel, maybe we should normalize quaternions, but this is a normal case with DNA values ?

This issue was referenced by 29c2a64694

This issue was referenced by 29c2a6469427b7c43d815188af7e7ed3f79f486c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46302
No description provided.