BGE: Fix T46302: abort call for unnormalized quaterions.